# mcbot-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE-APACHE  README.md
src/: commands.rs  config.rs  handler.rs  helpers.rs  lib.rs  main.rs
