[package]
name = "mcbot-rs"
version = "0.1.2"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Discord bot for displaying the status of your minecraft server"
readme = "README.md"
repository = "https://github.com/Hpmason/mcbot-rs"
keywords = ["discord", "minecraft", "bot"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0"
tokio = "0.2.0"

async-minecraft-ping = "0.3"

anyhow = "1.0"
lazy_static = "1.4"