[package]
name = "mcbot-rs"
version = "0.3.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Discord bot for displaying the status of your minecraft server"
readme = "README.md"
repository = "https://github.com/Hpmason/mcbot-rs"
keywords = ["discord", "minecraft", "bot"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"

async-minecraft-ping = "0.8"

lazy_static = "1.4"

[dependencies.tokio]
version = "1.15"
features = [
    "macros", 
    "rt-multi-thread", 
    "time"
    ]